tests/lexer_test/errors/lexnegativegrading.outlexerrors
[invalidchar, @, 1, 1]
[invalidchar, #, 1, 3]
[invalidchar, $, 1, 5]
[invalidchar, ', 1, 7]
[invalidchar, \, 1, 9]
[invalidchar, ~, 1, 11]
[invalidid, _abc, 18, 1]
[invalidid, _1abc, 20, 1]
